cmake_minimum_required(VERSION 3.8)
project(GoogleAdvancedPath)
enable_testing()

set(CMAKE_CXX_STANDARD 11)

find_package(Boost COMPONENTS unit_test_framework REQUIRED)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    link_libraries(${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
    add_subdirectory(Decompression)
    add_subdirectory(Candies)
    add_subdirectory(PalindromePermutation)
else()
    message(SEND_ERROR "Boost wasn't found")
endif()